v 1.4 - SEPT 2016.

- Random noise can be added to the visibilities.
- Corrected bug related to a limitation in numpy. The visibilities of the same baseline that were too close in UV space (sharing pixels) were not added.

v 1.3 - MARCH 2016.

- Subarraying capabilities (2 subarrays), as well as primary-beam correction (tunnable antenna diameters) and zooming capabilities in the CLEAN GUI.


v 1.2b - JANUARY 2016.

- New window showing FFTs of source image, dirty beam and dirty image, callable directly from the main window by pressing the "u" key.

v 1.1.0 - DECEMBER 2015.

- Added new plots in the "show FFT" button.

- A baseline line is plotted in the array configuration when
the user clicks on a UV track in the UV plot.

- All image-related texts are refreshed when the images are changed.

- Added "Rescale" and "Restore" buttons to the CLEAN GUI.

v 0.4b1 - OCTOBER 2015.

- New integration into Tkinter.

- New CLEAN graphical interface

- New feature for corrupting antenna gains.


v 0.3.3-r1 - September 2015.

- Added "quit" button.

v 0.3.3 - September 2015.

- Changed zooming function (pressing Z or z for in/out).
- Use of Tk backend by default.

v 0.3.2 - June 2015.

- Removed matplotlib toolbar (showed buggy behavior).
- Added zooming functions (by double clicking).
- Corrected bugs.
- New models and array configurations.

v 0.3.1 - March 2015.
----------------------

- Added plot of array location as seen from the source.
- Revision records moved to bazaar (project in launchpad)

v0.3 - December 2014.
----------------------

- Added new arrays and source examples.
- Capability of reading images as source components.
- Overplot of source FT on top of UV coverage.
- Reversal of the sign of U in the UVplot (for selfconsistency).
- Added labels to antennas and printout of baseline info on click event.


v0.2.1 - September 2014.
-------------------------

-Minor bug corrections.
-Added printout of image intensity on click events.


v0.2 - August 2014.