@@ -2,6 +2,7 @@ LATITUDE -23.028
 DECLINATION -45.
 HOUR_ANGLE -1.0 1.0
 DIAMETER  7.0
+WAVELENGTH 0.3e-3 3.e-3
 ANTENNA   -19.39531371 125.8414049
 ANTENNA   -27.36985522 121.8795437
 ANTENNA   -20.24480314 116.2642849
