@@ -2,6 +2,8 @@ LATITUDE -23.028
 DECLINATION -45.
 HOUR_ANGLE -1.0 1.0
 
+WAVELENGTH 0.3e-3  3.e-3
+
 # ANTENNA DIAMETERS (IN METERS) 
 # FOR THE TWO SUB-ARRAYS:
 DIAMETER   12.   7.
