@@ -14,6 +14,10 @@ DECLINATION  45.0
 
 HOUR_ANGLE -0.1   0.1
 
+# RANGE OF OBSERVING WALVENGTHS (IN METERS)
+WAVELENGTH   3.e-3   1.e-2
+
+
 # FINALLY, THIS IS THE ANTENNA DISTRIBUTION (IN METERS)
 # FIRST NUMBER IS E-W OFFSET. SECOND NUMBER IS N-S OFFSET.
 # ANY NEW ANTENNA CAN BE INTRODUCED BY JUST ADDING A NEW LINE
