@@ -2,6 +2,7 @@ LATITUDE 45.0
 DECLINATION 45.
 HOUR_ANGLE -1.5 1.5
 
+WAVELENGTH 3.e-3  21.e-2
 
 ANTENNA  -24  -132
 ANTENNA  -12   -66
