@@ -2,6 +2,8 @@ LATITUDE 90.0
 DECLINATION 90.
 HOUR_ANGLE -6.0 6.0
 
+# RANGE OF OBSERVING WALVENGTHS (IN METERS)
+WAVELENGTH   3.e-3   21.e-2
 
 ANTENNA  -106.98  0
 ANTENNA  -105.66  0
