@@ -1,6 +1,8 @@
 LATITUDE 45.0
 DECLINATION 60.
 HOUR_ANGLE -1.5 1.5
+# RANGE OF OBSERVING WALVENGTHS (IN METERS)
+WAVELENGTH   3.e-3   21.e-2
 
 
 ANTENNA  -240  -1320
