@@ -18,6 +18,10 @@ DIAMETER  15.0
 
 HOUR_ANGLE -0.1   0.1
 
+# RANGE OF OBSERVING WALVENGTHS (IN METERS)
+WAVELENGTH   0.7e-3   3.e-3
+
+
 # FINALLY, THIS IS THE ANTENNA DISTRIBUTION (IN METERS)
 # FIRST NUMBER IS E-W OFFSET. SECOND NUMBER IS N-S OFFSET.
 # ANY NEW ANTENNA CAN BE INTRODUCED BY JUST ADDING A NEW LINE
