@@ -19,6 +19,9 @@ DIAMETER  25.0
 
 HOUR_ANGLE -0.1   0.1
 
+# RANGE OF OBSERVING WALVENGTHS (IN METERS)
+WAVELENGTH   7.e-3   21.e-2
+
 # FINALLY, THIS IS THE ANTENNA DISTRIBUTION (IN METERS)
 # FIRST NUMBER IS E-W OFFSET. SECOND NUMBER IS N-S OFFSET.
 # ANY NEW ANTENNA CAN BE INTRODUCED BY JUST ADDING A NEW LINE
