@@ -18,6 +18,9 @@ DIAMETER   25.0
 
 HOUR_ANGLE -0.1   0.1
 
+# RANGE OF OBSERVING WALVENGTHS (IN METERS)
+WAVELENGTH   3e-2   0.5
+
 # FINALLY, THIS IS THE ANTENNA DISTRIBUTION (IN METERS)
 # FIRST NUMBER IS E-W OFFSET. SECOND NUMBER IS N-S OFFSET.
 # ANY NEW ANTENNA CAN BE INTRODUCED BY JUST ADDING A NEW LINE
