@@ -1,6 +1,10 @@
 LATITUDE  45.0
 DECLINATION  45.0
 HOUR_ANGLE  0.0   0.0
+
+# RANGE OF OBSERVING WALVENGTHS (IN METERS)
+WAVELENGTH   7e-3   21.e-2
+
 ANTENNA   0.000e+00    0.000e+00
 ANTENNA   7.404e+00    3.969e+02
 ANTENNA   3.887e+01    1.184e+03
