@@ -16,5 +16,5 @@ DefaultMod = 'Nebula.model' # HOHOHO
 
 
 # Array to load at start:
-DefaultArray = 'Golay_12.array'
+DefaultArray = 'Long_Golay_12.array'
 
