@@ -7,9 +7,7 @@
 IMSIZE 40.
 
 
-# THIS IS THE OBSERVING WAVELENGTH (IN METERS):
 
-WAVELENGTH  1.e-03
 
 
 # HERE COME THE MODEL COMPONENTS. THERE ARE THREE
