@@ -7,9 +7,6 @@
 IMSIZE 3.0
 
 
-# THIS IS THE OBSERVING WAVELENGTH (IN METERS):
-
-WAVELENGTH  1.e-03
 
 
 # HERE COME THE MODEL COMPONENTS. THERE ARE THREE
