@@ -7,9 +7,6 @@
 IMSIZE 6.0
 
 
-# THIS IS THE OBSERVING WAVELENGTH (IN METERS):
-
-WAVELENGTH  3.e-03
 
 
 # HERE COME THE MODEL COMPONENTS. THERE ARE THREE
