@@ -7,11 +7,6 @@
 IMSIZE 400.
 
 
-# THIS IS THE OBSERVING WAVELENGTH (IN METERS):
-
-WAVELENGTH  1.e-02
-
-
 # HERE COME THE MODEL COMPONENTS. THERE ARE THREE
 # RECOGNIZED KINDS OF COMPONENTS:
 # POINT SOURCE      (P)
