@@ -7,9 +7,6 @@
 IMSIZE 100.
 
 
-# THIS IS THE OBSERVING WAVELENGTH (IN METERS):
-
-WAVELENGTH  5.e-02
 
 
 # HERE COME THE MODEL COMPONENTS. THERE ARE THREE
